# rust_crypto_bot

./: Cargo.toml  config.yml  db
data/: db_price_history
src/: config.rs  cryptowatch.rs  datastore.rs  discord.rs  main.rs
